airflow/logs/dag_id=missed_deadline_job_dag/run_id=manual__2024-02-26T09:27:10.724567+00:00/task_id=create_missed_deadline_table/attempt=1.log
[2024-02-26T16:27:11.093+0700] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: missed_deadline_job_dag.create_missed_deadline_table manual__2024-02-26T09:27:10.724567+00:00 [queued]>
[2024-02-26T16:27:11.099+0700] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: missed_deadline_job_dag.create_missed_deadline_table manual__2024-02-26T09:27:10.724567+00:00 [queued]>
[2024-02-26T16:27:11.100+0700] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2024-02-26T16:27:11.110+0700] {taskinstance.py:2191} INFO - Executing <Task(PostgresOperator): create_missed_deadline_table> on 2024-02-26 09:27:10.724567+00:00
[2024-02-26T16:27:11.112+0700] {standard_task_runner.py:60} INFO - Started process 27374 to run task
[2024-02-26T16:27:11.115+0700] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'missed_deadline_job_dag', 'create_missed_deadline_table', 'manual__2024-02-26T09:27:10.724567+00:00', '--job-id', '50', '--raw', '--subdir', 'DAGS_FOLDER/missed_deadlinee_dag.py', '--cfg-path', '/tmp/tmp7mqn0r7h']
[2024-02-26T16:27:11.117+0700] {standard_task_runner.py:88} INFO - Job 50: Subtask create_missed_deadline_table
[2024-02-26T16:27:11.168+0700] {task_command.py:423} INFO - Running <TaskInstance: missed_deadline_job_dag.create_missed_deadline_table manual__2024-02-26T09:27:10.724567+00:00 [running]> on host MinhNhut.
[2024-02-26T16:27:11.245+0700] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='missed_deadline_job_dag' AIRFLOW_CTX_TASK_ID='create_missed_deadline_table' AIRFLOW_CTX_EXECUTION_DATE='2024-02-26T09:27:10.724567+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-02-26T09:27:10.724567+00:00'
[2024-02-26T16:27:11.245+0700] {sql.py:276} INFO - Executing: CREATE TABLE IF NOT EXISTS olist_missed_deadline_tb(
    id SERIAL,
    order_id VARCHAR(200),
    seller_id VARCHAR(200),
    shipping_limit_date DATETIME,
    price FLOAT,
    freight_value, FLOAT,
    product_id VARCHAR(200),
    product_category_name VARCHAR(200),
    customer_id VARCHAR(200),
    order_status VARCHAR(200),
    order_purchase_timestamp DATETIME,
    order_delivered_carrier_date DATETIME,
    order_delivered_customer_date DATETIME,
    order_estimated_delivery_date DATETIME,
    PRIMARY KEY (id, order_id, seller_id, product_id)
);
[2024-02-26T16:27:11.257+0700] {base.py:83} INFO - Using connection ID 'olist_pg_conn' for task execution.
[2024-02-26T16:27:11.270+0700] {base.py:83} INFO - Using connection ID 'olist_pg_conn' for task execution.
[2024-02-26T16:27:11.281+0700] {sql.py:450} INFO - Running statement: CREATE TABLE IF NOT EXISTS olist_missed_deadline_tb(
    id SERIAL,
    order_id VARCHAR(200),
    seller_id VARCHAR(200),
    shipping_limit_date DATETIME,
    price FLOAT,
    freight_value, FLOAT,
    product_id VARCHAR(200),
    product_category_name VARCHAR(200),
    customer_id VARCHAR(200),
    order_status VARCHAR(200),
    order_purchase_timestamp DATETIME,
    order_delivered_carrier_date DATETIME,
    order_delivered_customer_date DATETIME,
    order_estimated_delivery_date DATETIME,
    PRIMARY KEY (id, order_id, seller_id, product_id)
);, parameters: None
[2024-02-26T16:27:11.282+0700] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/nhut/etl-airflow/.venv/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/nhut/etl-airflow/.venv/lib/python3.10/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/nhut/etl-airflow/.venv/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/nhut/etl-airflow/.venv/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ","
LINE 7:     freight_value, FLOAT,
                         ^

[2024-02-26T16:27:11.293+0700] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=missed_deadline_job_dag, task_id=create_missed_deadline_table, execution_date=20240226T092710, start_date=20240226T092711, end_date=20240226T092711
[2024-02-26T16:27:11.303+0700] {standard_task_runner.py:107} ERROR - Failed to execute job 50 for task create_missed_deadline_table (syntax error at or near ","
LINE 7:     freight_value, FLOAT,
                         ^
; 27374)
[2024-02-26T16:27:11.327+0700] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-26T16:27:11.350+0700] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
